2005-10-31  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: Added nb to ALL_LINGUAS 

2005-10-28  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: Version 0.9.9, require ipod-sharp 0.5.9, mono 1.1.9.2,
	GStreamer 0.8.11, libnautilus-burn 2.12
	* data/glade/trackinfo.glade: Switch order of Save/Cancel buttons
	* data/glade/player.glade: Add text labels to rip/burn icons
	* src/Library.cs: Handle exception when thrown when unable to create
	library directory
	* src/NotificationAreaIcon.cs: Switch order of Next/Previous menu items

2005-10-28  David Sedeño <david@alderia.com>

	* src/SearchEntry.cs: Added CanFocus field
	* src/PlayerInterface.cs: Check if the search entry has already the
	focus so we can search with anything with 'j' letter.

2005-10-27  Aaron Bockover  <aaron@aaronbock.net>
	
	* libbanshee/cd-test.c: Removed #include "cd-info.h"
	* src/AudioCdCore.cs: Use Utilities OpenFlags flags
	* src/LibraryTrackInfo.cs: Use DateTimeUtil class for D/T conversion
	* src/Utilities.cs: Copied Date/Time utils from 
	Mono.Unix.Native.NativeConvert to DateTimeUtil class, and OpenFlags
	* src/Main.cs: Arg is audio-cd for now instead of play-cd
	* src/Makefile.am: Added mcs.exe to EXTRA_DIST
	* src/PlayerInterface.cs (PromptForImport): Fix initial import 
	dialog freeze
	* src/MusicBrainz/Makefile.am: Added $(srcdir)/ prefixes to sources
	to make distcheck happy
	* src/mcs.exe: Added precompiled bare assembly of mono mcs 1.1.9.2 
	for packagers to use who can't upgrade from mono 1.1.8. Assemblies
	produced by this 1.1.9.2 compiler will run on the 1.1.8 mono stack
	* configure.ac: Added option to use an internal mcs 1.1.9.2 compiler,
	--with-internal-mcs. Use only if you can't upgrade your distrobution's
	mono

2005-10-26  Aaron Bockover  <aaron@aaronbock.net>

	* src/Library.cs: Use new/permanent library DB path: 
	~/.gnome2/banshee/banshee.db, use and move the old one if it exists
	* plugincore/Paths.cs: Moved ApplicationData from ~/.config/banshee to